@@ -1,3 +1,6 @@
+2005-05-16  Alex Roitman  <shura@gramps-project.org>
+	* src/ansel_utf8.py: Convert to Unix end-of-line.
+
 2005-05-16  Don Allingham  <don@gramps-project.org>
 	* src/FamilyView.py: fix reordering of children in family view
 
